[package]
name = "lincloud"
version = "0.0.1"
license = "MIT"
authors = ["Zhowj <zhwj.336@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0"
actix-multipart = "0"
actix-web-httpauth = "0"
structopt = "0"
port_check = "0"
failure = "0"
log = "0"
yansi = "0"
local_ipaddress = "0"
